--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,12 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
+    inputs:
+      deploy:
+        description: 'Set to "yes" to run deployment step'
+        required: false
+        default: "no"
 
 jobs:
   build-and-test:
@@ -43,7 +49,9 @@ jobs:
     name: 🚀 Deploy Client1 to Server
     runs-on: ubuntu-latest
     needs: build-and-test
-    if: github.ref == 'refs/heads/main'
+    if: |
+      github.event_name == 'workflow_dispatch' && github.event.inputs.deploy == 'yes'
+      || (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/'))
 
     steps:
       - name: Checkout code
